Fixed spelling and grammar issues.

--- a/slides/full-payswarm/index.xhtml
+++ b/slides/full-payswarm/index.xhtml
@@ -57,7 +57,7 @@ Native, in-browser, copyright-aware, legal peer-to-peer digital content distribu
     </li>
 
     <li>
-Useful when small content creators need to distribute massive amounts of
+Useful when content creators need to distribute massive amounts of
 high-definition content, such as video.
     </li>
 
@@ -177,7 +177,11 @@ content!
   <h1>Learn More about PaySwarm</h1>
 
   <ul>
-    <li>Learn about <a href="../oauth-payswarm/">Simple PaySwarm</a> (via OAuth)</li>
+    <li>Learn about <a href="../oauth-payswarm/">Website-based PaySwarm</a>.
+      <ul>
+        <li>A simpler way to use PaySwarm, built on top of OAuth.</li>
+      </ul>
+    </li>
   </ul>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
