--- a/slides/oauth-payswarm/index.xhtml
+++ b/slides/oauth-payswarm/index.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"> 
 
 <head> 
-  <title>Simple, Server-based PaySwarm</title> 
+  <title>Website-based PaySwarm</title>
   <meta name="copyright" 
    content="Copyright &#169; 2010 Digital Bazaar, Inc. Available under Creative Commons Attribution Share-Alike 3.0" /> 
   <link rel="stylesheet" type="text/css" media="screen, projection, print" 
@@ -21,7 +21,7 @@
 </div>
 
 <div class="slide cover"> 
- <h1>Simple, Server-based PaySwarm</h1> 
+ <h1>Website-based PaySwarm</h1> 
  <div style="text-align: center;">
   <img style="width: 25%;" src="../../images/payswarm-twitter.png" 
    alt="PaySwarm logo - a blocky, green tornado on a white background" class="cover" /><br />
@@ -49,7 +49,7 @@
 </div>
 
 <div class="slide"> 
-  <h1>The Goal of Simple PaySwarm</h1> 
+  <h1>The Goal of Website-based PaySwarm</h1> 
 
   <ul class="incremental">
     <li>
@@ -65,7 +65,7 @@ Easy and familiar to developers who have worked with OAuth (Twitter, Facebook, e
     </li>
 
     <li>
-Useful if you only need to sell licenses to access your content. For example you want to sell access to journal articles, and don't have expensive data streaming requirements like HD Video.
+Useful if a publisher only needs to sell licenses to access content. For example, if a publisher wants to sell access to journal articles and doesn't have expensive HD video data streaming requirements.
     </li>
 
   </ul>
@@ -75,7 +75,7 @@ Useful if you only need to sell licenses to access your content. For example you
 </div> 
 
 <div class="slide"> 
-  <h1>A Simple PaySwarm Purchase - The Participants</h1>
+  <h1>Website-based PaySwarm Purchase - The Participants</h1>
   <div style="text-align: center;">
    <img src="pl-participants.png" width="80%"
      alt=""/>
@@ -85,7 +85,7 @@ Useful if you only need to sell licenses to access your content. For example you
 </div>
 
 <div class="slide"> 
-  <h1>A Simple PaySwarm Purchase - The Concepts</h1>
+  <h1>Website-based PaySwarm Purchase - The Concepts</h1>
   <div style="text-align: center;">
    <img src="pl-concepts.png" width="80%"
      alt=""/>
@@ -95,7 +95,7 @@ Useful if you only need to sell licenses to access your content. For example you
 </div>
 
 <div class="slide"> 
-  <h1>A Simple PaySwarm Purchase - Overview</h1>
+  <h1>Website-based PaySwarm Purchase - Overview</h1>
   <div style="text-align: center;">
    <img src="pl-overview.png" width="80%"
      alt=""/>
@@ -105,7 +105,7 @@ Useful if you only need to sell licenses to access your content. For example you
 </div>
 
 <div class="slide"> 
-  <h1>A Simple PaySwarm Purchase</h1>
+  <h1>Website-based PaySwarm Purchase</h1>
   <div style="text-align: center;">
    <img src="pl-step1.png" width="80%"
      alt=""/>
@@ -115,7 +115,7 @@ Useful if you only need to sell licenses to access your content. For example you
 </div>
 
 <div class="slide"> 
-  <h1>A Simple PaySwarm Purchase</h1>
+  <h1>Website-based PaySwarm Purchase</h1>
   <div style="text-align: center;">
    <img src="pl-step2.png" width="80%"
      alt=""/>
@@ -125,7 +125,7 @@ Useful if you only need to sell licenses to access your content. For example you
 </div>
 
 <div class="slide"> 
-  <h1>A Simple PaySwarm Purchase</h1>
+  <h1>Website-based PaySwarm Purchase</h1>
   <div style="text-align: center;">
    <img src="pl-step3.png" width="80%"
      alt=""/>
@@ -135,7 +135,7 @@ Useful if you only need to sell licenses to access your content. For example you
 </div>
 
 <div class="slide"> 
-  <h1>A Simple PaySwarm Purchase</h1>
+  <h1>Website-based PaySwarm Purchase</h1>
   <div style="text-align: center;">
    <img src="pl-step4.png" width="80%"
      alt=""/>
@@ -148,7 +148,11 @@ Useful if you only need to sell licenses to access your content. For example you
   <h1>Learn More about PaySwarm</h1>
 
   <ul>
-    <li>Learn about <a href="../full-payswarm/">Distributed PaySwarm</a> (Browser-based)</li>
+    <li>Learn about <a href="../full-payswarm/">Browser-based PaySwarm</a>
+      <ul>
+        <li>A full in-browser solution for buying and re-distributing digital content from within the Web browser.</li>
+      </ul>
+    </li>
   </ul>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
