--- a/slides/intro/index.xhtml
+++ b/slides/intro/index.xhtml
@@ -52,7 +52,7 @@
   <h1>The Goal of PaySwarm</h1> 
 
   <p style="font-weight: bold; font-style: italic;">
-"The PaySwarm web platform is an open standard that enables web browsers and web devices to acquire licenses, collect micropayments and perform copyright-aware digital media distribution."
+"The PaySwarm web platform is an open standard that enables web browsers and web devices to acquire licenses, distribute micropayments and perform copyright-aware digital media distribution."
   </p>
 
   <ul class="incremental">
@@ -120,8 +120,8 @@ The <a href="http://github.com/digitalbazaar/bitmunk">reference implementation s
     </li>
 
     <li>
-The technology works, the W3C is ready to start standardization. We need the 
-content creators to give us the signal to start, as well as help guide the 
+The technology works; the W3C is ready to start standardization. We need the 
+content creators to give us the signal to start as well as help guide the 
 standard.
     </li>
 
@@ -135,8 +135,16 @@ standard.
   <h1>Learn More about PaySwarm</h1>
 
   <ul>
-    <li>Learn about <a href="../oauth-payswarm/">Simple PaySwarm</a> (OAuth/Server-based)</li>
-    <li>Learn about <a href="../full-payswarm/">Distributed PaySwarm</a> (Browser-based)</li>
+    <li>Learn about <a href="../oauth-payswarm/">Website-based PaySwarm</a>.
+      <ul>
+        <li>A simple way to use PaySwarm, built on top of OAuth.</li>
+      </ul>
+    </li>
+    <li>Learn about <a href="../full-payswarm/">Browser-based PaySwarm</a>
+      <ul>
+        <li>A future-looking solution for natively buying and re-distributing digital content from within the Web browser.</li>
+      </ul>
+    </li>
   </ul>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
