Placed slide decks into proper directories.

--- a/slides/browser-payswarm/index.xhtml
+++ b/slides/browser-payswarm/index.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"> 
 
 <head> 
-  <title>Website-based PaySwarm</title>
+  <title>Browser-based PaySwarm</title> 
   <meta name="copyright" 
    content="Copyright &#169; 2010 Digital Bazaar, Inc. Available under Creative Commons Attribution Share-Alike 3.0" /> 
   <link rel="stylesheet" type="text/css" media="screen, projection, print" 
@@ -21,7 +21,7 @@
 </div>
 
 <div class="slide cover"> 
- <h1>Website-based PaySwarm</h1> 
+ <h1>Browser-based PaySwarm</h1> 
  <div style="text-align: center;">
   <img style="width: 25%;" src="../../images/payswarm-twitter.png" 
    alt="PaySwarm logo - a blocky, green tornado on a white background" class="cover" /><br />
@@ -49,35 +49,34 @@
 </div>
 
 <div class="slide"> 
-  <h1>The Goal of Website-based PaySwarm</h1> 
+  <h1>The Goal of Browser-based PaySwarm</h1> 
 
   <ul class="incremental">
     <li>
-Provide a purely server-based way to use PaySwarm.
+Native, in-browser, copyright-aware, legal peer-to-peer digital content distribution.
     </li>
 
     <li>
-Websites can implement PaySwarm independently of the browser manufacturers.
+Useful when content creators need to distribute massive amounts of
+high-definition content, such as video.
     </li>
 
     <li>
-Easy and familiar to developers who have worked with OAuth (Twitter, Facebook, etc.)
-    </li>
-
-    <li>
-Useful if a publisher only needs to sell licenses to access content. For example, if a publisher wants to sell access to journal articles and doesn't have expensive HD video data streaming requirements.
+Reward content creators for creating awesome stuff and fans for helping to
+distribute the awesome stuff. Pay fans directly for helping to distribute 
+content!
     </li>
 
   </ul>
 
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div> 
+</div>
 
 <div class="slide"> 
-  <h1>Website-based PaySwarm Purchase - The Participants</h1>
+  <h1>Browser-based PaySwarm - The Participants</h1>
   <div style="text-align: center;">
-   <img src="pl-participants.png" width="100%"
+   <img src="pp-participants.png" width="80%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -85,9 +84,9 @@ Useful if a publisher only needs to sell licenses to access content. For example
 </div>
 
 <div class="slide"> 
-  <h1>Website-based PaySwarm Purchase - The Concepts</h1>
+  <h1>Browser-based PaySwarm - The Concepts</h1> 
   <div style="text-align: center;">
-   <img src="pl-concepts.png" width="100%"
+   <img src="pp-concepts.png" width="80%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -95,9 +94,9 @@ Useful if a publisher only needs to sell licenses to access content. For example
 </div>
 
 <div class="slide"> 
-  <h1>Website-based PaySwarm Purchase - Overview</h1>
+  <h1>Browser-based PaySwarm - Overview</h1> 
   <div style="text-align: center;">
-   <img src="pl-overview.png" width="100%"
+   <img src="pp-overview.png" width="80%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -105,9 +104,9 @@ Useful if a publisher only needs to sell licenses to access content. For example
 </div>
 
 <div class="slide"> 
-  <h1>Website-based PaySwarm Purchase</h1>
+  <h1>Browser-based PaySwarm</h1> 
   <div style="text-align: center;">
-   <img src="pl-step1.png" width="100%"
+   <img src="pp-step1.png" width="80%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -115,9 +114,9 @@ Useful if a publisher only needs to sell licenses to access content. For example
 </div>
 
 <div class="slide"> 
-  <h1>Website-based PaySwarm Purchase</h1>
+  <h1>Browser-based PaySwarm</h1> 
   <div style="text-align: center;">
-   <img src="pl-step2.png" width="100%"
+   <img src="pp-step2.png" width="80%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -125,9 +124,9 @@ Useful if a publisher only needs to sell licenses to access content. For example
 </div>
 
 <div class="slide"> 
-  <h1>Website-based PaySwarm Purchase</h1>
+  <h1>Browser-based PaySwarm</h1> 
   <div style="text-align: center;">
-   <img src="pl-step3.png" width="100%"
+   <img src="pp-step3.png" width="80%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -135,9 +134,39 @@ Useful if a publisher only needs to sell licenses to access content. For example
 </div>
 
 <div class="slide"> 
-  <h1>Website-based PaySwarm Purchase</h1>
+  <h1>Browser-based PaySwarm</h1> 
   <div style="text-align: center;">
-   <img src="pl-step4.png" width="100%"
+   <img src="pp-step4.png" width="80%"
+     alt=""/>
+  </div>
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
+    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
+</div>
+
+<div class="slide"> 
+  <h1>Browser-based PaySwarm</h1> 
+  <div style="text-align: center;">
+   <img src="pp-step5.png" width="80%"
+     alt=""/>
+  </div>
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
+    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
+</div>
+
+<div class="slide"> 
+  <h1>Browser-based PaySwarm</h1> 
+  <div style="text-align: center;">
+   <img src="pp-step6.png" width="80%"
+     alt=""/>
+  </div>
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
+    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
+</div>
+
+<div class="slide"> 
+  <h1>Browser-based PaySwarm</h1> 
+  <div style="text-align: center;">
+   <img src="pp-step7.png" width="80%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -148,13 +177,13 @@ Useful if a publisher only needs to sell licenses to access content. For example
   <h1>Learn More about PaySwarm</h1>
 
   <ul>
-    <li>Learn about <a href="../full-payswarm/">Browser-based PaySwarm</a>
+    <li>Learn about <a href="../website-payswarm/">Website-based PaySwarm</a>.
       <ul>
-        <li>A full in-browser solution for buying and re-distributing digital content from within the Web browser.</li>
+        <li>A simpler way to use PaySwarm, built on top of OAuth.</li>
       </ul>
     </li>
   </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/../../images/db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
 
