--- a/slides/intro/index.xhtml
+++ b/slides/intro/index.xhtml
@@ -135,12 +135,12 @@ standard.
   <h1>Learn More about PaySwarm</h1>
 
   <ul>
-    <li>Learn about <a href="../oauth-payswarm/">Website-based PaySwarm</a>.
+    <li>Learn about <a href="../website-payswarm/">Website-based PaySwarm</a>.
       <ul>
         <li>A simple way to use PaySwarm, built on top of OAuth.</li>
       </ul>
     </li>
-    <li>Learn about <a href="../full-payswarm/">Browser-based PaySwarm</a>
+    <li>Learn about <a href="../browser-payswarm/">Browser-based PaySwarm</a>
       <ul>
         <li>A future-looking solution for natively buying and re-distributing digital content from within the Web browser.</li>
       </ul>
