--- a/slides/website-payswarm/index.xhtml
+++ b/slides/website-payswarm/index.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"> 
 
 <head> 
-  <title>Browser-based PaySwarm</title> 
+  <title>Website-based PaySwarm</title>
   <meta name="copyright" 
    content="Copyright &#169; 2010 Digital Bazaar, Inc. Available under Creative Commons Attribution Share-Alike 3.0" /> 
   <link rel="stylesheet" type="text/css" media="screen, projection, print" 
@@ -21,7 +21,7 @@
 </div>
 
 <div class="slide cover"> 
- <h1>Browser-based PaySwarm</h1> 
+ <h1>Website-based PaySwarm</h1> 
  <div style="text-align: center;">
   <img style="width: 25%;" src="../../images/payswarm-twitter.png" 
    alt="PaySwarm logo - a blocky, green tornado on a white background" class="cover" /><br />
@@ -49,34 +49,35 @@
 </div>
 
 <div class="slide"> 
-  <h1>The Goal of Browser-based PaySwarm</h1> 
+  <h1>The Goal of Website-based PaySwarm</h1> 
 
   <ul class="incremental">
     <li>
-Native, in-browser, copyright-aware, legal peer-to-peer digital content distribution.
+Provide a purely server-based way to use PaySwarm.
     </li>
 
     <li>
-Useful when content creators need to distribute massive amounts of
-high-definition content, such as video.
+Websites can implement PaySwarm independently of the browser manufacturers.
     </li>
 
     <li>
-Reward content creators for creating awesome stuff and fans for helping to
-distribute the awesome stuff. Pay fans directly for helping to distribute 
-content!
+Easy and familiar to developers who have worked with OAuth (Twitter, Facebook, etc.)
+    </li>
+
+    <li>
+Useful if a publisher only needs to sell licenses to access content. For example, if a publisher wants to sell access to journal articles and doesn't have expensive HD video data streaming requirements.
     </li>
 
   </ul>
 
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
+</div> 
 
 <div class="slide"> 
-  <h1>Browser-based PaySwarm - The Participants</h1>
+  <h1>Website-based PaySwarm Purchase - The Participants</h1>
   <div style="text-align: center;">
-   <img src="pp-participants.png" width="80%"
+   <img src="pl-participants.png" width="100%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -84,9 +85,9 @@ content!
 </div>
 
 <div class="slide"> 
-  <h1>Browser-based PaySwarm - The Concepts</h1> 
+  <h1>Website-based PaySwarm Purchase - The Concepts</h1>
   <div style="text-align: center;">
-   <img src="pp-concepts.png" width="80%"
+   <img src="pl-concepts.png" width="100%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -94,9 +95,9 @@ content!
 </div>
 
 <div class="slide"> 
-  <h1>Browser-based PaySwarm - Overview</h1> 
+  <h1>Website-based PaySwarm Purchase - Overview</h1>
   <div style="text-align: center;">
-   <img src="pp-overview.png" width="80%"
+   <img src="pl-overview.png" width="100%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -104,9 +105,9 @@ content!
 </div>
 
 <div class="slide"> 
-  <h1>Browser-based PaySwarm</h1> 
+  <h1>Website-based PaySwarm Purchase</h1>
   <div style="text-align: center;">
-   <img src="pp-step1.png" width="80%"
+   <img src="pl-step1.png" width="100%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -114,9 +115,9 @@ content!
 </div>
 
 <div class="slide"> 
-  <h1>Browser-based PaySwarm</h1> 
+  <h1>Website-based PaySwarm Purchase</h1>
   <div style="text-align: center;">
-   <img src="pp-step2.png" width="80%"
+   <img src="pl-step2.png" width="100%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -124,9 +125,9 @@ content!
 </div>
 
 <div class="slide"> 
-  <h1>Browser-based PaySwarm</h1> 
+  <h1>Website-based PaySwarm Purchase</h1>
   <div style="text-align: center;">
-   <img src="pp-step3.png" width="80%"
+   <img src="pl-step3.png" width="100%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -134,39 +135,9 @@ content!
 </div>
 
 <div class="slide"> 
-  <h1>Browser-based PaySwarm</h1> 
+  <h1>Website-based PaySwarm Purchase</h1>
   <div style="text-align: center;">
-   <img src="pp-step4.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>Browser-based PaySwarm</h1> 
-  <div style="text-align: center;">
-   <img src="pp-step5.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>Browser-based PaySwarm</h1> 
-  <div style="text-align: center;">
-   <img src="pp-step6.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>Browser-based PaySwarm</h1> 
-  <div style="text-align: center;">
-   <img src="pp-step7.png" width="80%"
+   <img src="pl-step4.png" width="100%"
      alt=""/>
   </div>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
@@ -177,13 +148,13 @@ content!
   <h1>Learn More about PaySwarm</h1>
 
   <ul>
-    <li>Learn about <a href="../oauth-payswarm/">Website-based PaySwarm</a>.
+    <li>Learn about <a href="../browser-payswarm/">Browser-based PaySwarm</a>
       <ul>
-        <li>A simpler way to use PaySwarm, built on top of OAuth.</li>
+        <li>A full in-browser solution for buying and re-distributing digital content from within the Web browser.</li>
       </ul>
     </li>
   </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
 
