Changed references to slide decks on home page.

--- a/index.xhtml
+++ b/index.xhtml
@@ -108,8 +108,8 @@ in more detail.
 
 <ul>
   <li><a href="slides/intro/">An Introduction to PaySwarm</a></li>
-  <li><a href="slides/oauth-payswarm/">Simple, Server-based PaySwarm</a> (via OAuth)</li>
-  <li><a href="slides/full-payswarm/">Browser-based PaySwarm</a></li>
+  <li><a href="slides/website-payswarm/">Website-based PaySwarm</a> (via OAuth)</li>
+  <li><a href="slides/browser-payswarm/">Browser-based PaySwarm</a></li>
 </ul>
 
 <h3>PaySwarm Roadmap</h3>
