Added explanations for each slide deck.

--- a/index.xhtml
+++ b/index.xhtml
@@ -107,9 +107,9 @@ in more detail.
 <h3>PaySwarm Presentations and Slides</h3>
 
 <ul>
-  <li><a href="slides/intro/">An Introduction to PaySwarm</a></li>
-  <li><a href="slides/website-payswarm/">Website-based PaySwarm</a> (via OAuth)</li>
-  <li><a href="slides/browser-payswarm/">Browser-based PaySwarm</a></li>
+  <li><a href="slides/intro/">An Introduction to PaySwarm</a> - A high-level presentation about the goal of PaySwarm.</li>
+  <li><a href="slides/website-payswarm/">Website-based PaySwarm</a> - An explanation of how Website-to-Website PaySwarm works.</li>
+  <li><a href="slides/browser-payswarm/">Browser-based PaySwarm</a> - An explanation of how Browser-based PaySwarm works.</li>
 </ul>
 
 <h3>PaySwarm Roadmap</h3>
