--- a/slides/contracts/index.xhtml
+++ b/slides/contracts/index.xhtml
@@ -23,7 +23,7 @@
 <div class="slide cover"> 
  <h1>PaySwarm Digital Contracts</h1> 
  <div style="text-align: center;">
-  <img style="width: 25%;" src="payswarm-twitter.png" 
+  <img style="width: 25%;" src="../../images/payswarm-twitter.png" 
    alt="PaySwarm logo - a blocky, green tornado on a white background" class="cover" /><br />
   <a href="http://payswarm.com/">http://payswarm.com</a>
  </div>
@@ -34,7 +34,7 @@
   Twitter: <a href="http://twitter.com/manusporny">@manusporny</a><br />
   Skype: msporny<br />
  </p>
- <div><img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+ <div><img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
   alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" /> 
  </div>
 </div>
@@ -61,7 +61,7 @@ Content owners retain all rights and can set royalties and prices at will.
 
   </ul>
 
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div> 
 
@@ -69,20 +69,20 @@ Content owners retain all rights and can set royalties and prices at will.
   <h1>Why Digital Contracts?</h1>
   <ul class="incremental">
     <li>
-      Legally enforce-able for domestic and foreign commerce via the 
+      Legally enforceable for domestic and foreign commerce via the 
       <a href="http://en.wikipedia.org/wiki/Electronic_Signatures_in_Global_and_National_Commerce_Act">ESIGN Act</a>.
     </li>
 
     <li>
-      Machine-readable and verifiable.
+      <a href="http://en.wikipedia.org/wiki/Digital_signatures">Digital Signatures</a> are machine-readable and verifiable.
     </li>
 
     <li>
       Requires establishing identity of all participants 
-      (via banking information).
+      (via credit card or banking information).
     </li>
   </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
 
@@ -90,36 +90,52 @@ Content owners retain all rights and can set royalties and prices at will.
   <h1>The Participants in a PaySwarm Contract</h1>
   <ul class="incremental">
     <li>
-      Content Owner - Provides a license for content (example: personal use).
+      <img style="vertical-align: middle; height: 10%;" src="co.png" /> Content Owner - Provides a license for content - e.g. personal use.
     </li>
 
     <li>
-      PaySwarm Authority - Monitors and approves the Digital Contract. 
+      <img style="vertical-align: middle; height: 10%;" src="pa.png" /> PaySwarm Authority - Monitors and approves the Digital Contract. 
       Distributes payment.
     </li>
 
     <li>
-      Buyer - The individual making the purchase.
+      <img style="vertical-align: middle; height: 10%;" src="buyer.png" /> Buyer - The individual making the purchase.
     </li>
 
     <li>
-      Seller - The individual providing a download source for the digital content (example: MP3).
+      <img style="vertical-align: middle; height: 10%;" src="seller.png" /> Seller - The individual providing a download source for the digital content - e.g. MP3.
     </li>
 
   </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
 
 <div class="slide"> 
   <h1>Parts of a PaySwarm Contract</h1>
+    <img style="position:absolute; right: 10px; width: 10%;" src="contract.png" />
+    <ul class="incremental" style="width: 85%">
+      <li><img style="vertical-align: middle; height: 8%;" src="media.png" /> Media - Describes the type of media being purchased <ul><li>e.g. The song Whenever, Wherever by Shakira</li></ul></li>
+      <li><img style="vertical-align: middle; height: 8%;" src="license.png" /> License - Establishes a Buyer's rights for the Media <ul><li>e.g. Personal use, allow PaySwarm redistribution</li></ul></li>
+      <li><img style="vertical-align: middle; height: 8%;" src="file.png" /> File - Describes the file being purchased <ul><li>e.g. A stereo MP3 file at 192Kbps</li></ul></li>
+      <li><img style="vertical-align: middle; height: 6%;" src="payee.png" /> Payee - Describes each entity to be paid <ul><li>e.g. $0.65 to the Licensor, $0.01 to each Seller</li></ul></li>
+      <li><img style="vertical-align: middle; height: 6%;" src="cs.png" /> Contract Section - Data delivery agreement between Buyer and Seller <ul><li>e.g. The last 1 Megabyte of the song in less than 30 seconds</li></ul></li>
+    </ul>
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
+    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
+</div>
+
+<div class="slide"> 
+  <h1>Who Gets Paid in a PaySwarm Contract?</h1>
+  <p>The <img style="vertical-align: middle; height: 10%;" src="buyer.png" /> Buyer is the one that makes the payment, the disbursements are
+     as follows:</p>
   <ul class="incremental">
-    <li>License - Establishes a Buyer's rights - ie: personal use.</li>
-    <li>Media - Describes the type of media being purchased.</li>
-    <li> - .</li>
-    <li></li>
+    <li><img style="vertical-align: middle; height: 10%;" src="co.png" /> - The Content Owner is paid for the License.</li>
+    <li><img style="vertical-align: middle; height: 10%;" src="seller.png" /> - Each seller gets paid for every contract section (every piece of the file) they deliver successfully.</li>
+    <li><img style="vertical-align: middle; height: 10%;" src="pa.png" /> - The Payswarm Authority collects a fee for processing and storing the contract.</li>
+    <li><img style="vertical-align: middle; height: 7%;" src="payee.png" /> - More Payees can be added by the Content Owner, Seller, Buyer and PaySwarm Authority.</li>
   </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
 
@@ -130,7 +146,7 @@ Content owners retain all rights and can set royalties and prices at will.
     <li></li>
     <li></li>
   </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
 
@@ -141,7 +157,7 @@ Content owners retain all rights and can set royalties and prices at will.
     <li></li>
     <li></li>
   </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
 
@@ -152,7 +168,7 @@ Content owners retain all rights and can set royalties and prices at will.
     <li></li>
     <li></li>
   </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
 
@@ -163,18 +179,7 @@ Content owners retain all rights and can set royalties and prices at will.
     <li></li>
     <li></li>
   </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>Slide</h1>
-  <ul class="incremental">
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
 
@@ -192,7 +197,7 @@ Content owners retain all rights and can set royalties and prices at will.
   Twitter: <a href="http://twitter.com/manusporny">@manusporny</a><br />
   Skype: msporny<br />
  </p>
- <div><img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+ <div><img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
   alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" /> 
  </div>
 </div>
