Finished contract slides.

--- a/slides/contracts/index.xhtml
+++ b/slides/contracts/index.xhtml
@@ -131,7 +131,7 @@ Content owners retain all rights and can set royalties and prices at will.
      as follows:</p>
   <ul class="incremental">
     <li><img style="vertical-align: middle; height: 10%;" src="co.png" /> - The Content Owner is paid for the License.</li>
-    <li><img style="vertical-align: middle; height: 10%;" src="seller.png" /> - Each seller gets paid for every contract section (every piece of the file) they deliver successfully.</li>
+    <li><img style="vertical-align: middle; height: 10%;" src="seller.png" /> - Each Seller gets paid for every contract section (every piece of the file) they deliver successfully.</li>
     <li><img style="vertical-align: middle; height: 10%;" src="pa.png" /> - The Payswarm Authority collects a fee for processing and storing the contract.</li>
     <li><img style="vertical-align: middle; height: 7%;" src="payee.png" /> - More Payees can be added by the Content Owner, Seller, Buyer and PaySwarm Authority.</li>
   </ul>
@@ -140,44 +140,37 @@ Content owners retain all rights and can set royalties and prices at will.
 </div>
 
 <div class="slide"> 
-  <h1>Slide</h1>
+  <h1>PaySwarm Contract Legal Obligations</h1>
+  <p>All parties involved in a PaySwarm Contract have legally-enforceable obligations:</p>
   <ul class="incremental">
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><img style="vertical-align: middle; height: 10%;" src="buyer.png" /> - The Buyer is required to authorize payment on delivery of content.</li>
+    <li><img style="vertical-align: middle; height: 10%;" src="co.png" /> - The Content Owner is required to acknowledge all Licenses that they have sold.</li>
+    <li><img style="vertical-align: middle; height: 10%;" src="seller.png" /> - Each Seller is required to deliver content that they have agreed to under the terms in the Contract.</li>
+    <li><img style="vertical-align: middle; height: 10%;" src="pa.png" /> - The Payswarm Authority is required to collect and distribute all payments to the Payees listed in the Contract.</li>
   </ul>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
 
 <div class="slide"> 
-  <h1>Slide</h1>
-  <ul class="incremental">
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
+  <h1>Learn More about PaySwarm</h1>
 
-<div class="slide"> 
-  <h1>Slide</h1>
-  <ul class="incremental">
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>Slide</h1>
-  <ul class="incremental">
-    <li></li>
-    <li></li>
-    <li></li>
+  <ul>
+    <li>An <a href="../intro/">Introduction to PaySwarm</a>.
+      <ul>
+        <li>A high-level introduction to the goals of PaySwarm.</li>
+      </ul>
+    </li>
+    <li>Learn about <a href="../website-payswarm/">Website-based PaySwarm</a>.
+      <ul>
+        <li>A simple way to use PaySwarm, built on top of OAuth.</li>
+      </ul>
+    </li>
+    <li>Learn about <a href="../browser-payswarm/">Browser-based PaySwarm</a>
+      <ul>
+        <li>A future-looking solution for natively buying and re-distributing digital content from within the Web browser.</li>
+      </ul>
+    </li>
   </ul>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
@@ -186,7 +179,7 @@ Content owners retain all rights and can set royalties and prices at will.
 <div class="slide end"> 
  <h1>Comments and Concerns</h1> 
  <div style="text-align: center;">
-  <img style="width: 25%;" src="payswarm-twitter.png" 
+  <img style="width: 25%;" src="../../images/payswarm-twitter.png" 
    alt="PaySwarm logo - a blocky, green tornado on a white background" class="cover" /><br />
   <a href="http://payswarm.com/">http://payswarm.com</a>
  </div>
