Added slide set about browser purchases.

--- a/index.xhtml
+++ b/index.xhtml
@@ -110,6 +110,8 @@ in more detail.
   <li><a href="slides/intro/">An Introduction to PaySwarm</a> - A high-level presentation about the goal of PaySwarm.</li>
   <li><a href="slides/website-payswarm/">Website-based PaySwarm</a> - An explanation of how Website-to-Website PaySwarm works.</li>
   <li><a href="slides/browser-payswarm/">Browser-based PaySwarm</a> - An explanation of how Browser-based PaySwarm works.</li>
+  <li><a href="slides/contracts/">PaySwarm Digital Contracts</a> - Why and How PaySwarm uses Digital Contracts.</li>
+  <li><a href="slides/browser-purchase/">Browser-based Purchase</a> - A high-level walkthrough of a simple browser-based PaySwarm purchase.</li>
 </ul>
 
 <h3>PaySwarm Roadmap</h3>
