Updated PaySwarm OAuth demo client-side code.

--- a/demos/oauth/index.html
+++ b/demos/oauth/index.html
@@ -48,6 +48,8 @@
       <p>This paragraph is an introduction to the story and gives a lead-in
       so that people may want to purchase the rest of the article.
       </p>
+
+      <p><a href="payswarm.php">See the rest of the article ($0.01)...</a></p>
     </div>
 
     <div id="footer">
