Checkpointing mostly operational PaySwarm+OAuth purchase mechanism.

--- a/demos/oauth/stories/preview.html
+++ b/demos/oauth/stories/preview.html
@@ -49,7 +49,7 @@
       so that people may want to purchase the rest of the article.
       </p>
 
-      <p><a href="payswarm.php">See the rest of the article ($0.01)...</a></p>
+      <p><a href="story.php?action=purchase">See the rest of the article ($0.01)...</a></p>
     </div>
 
     <div id="footer">
