Added link to XRD format.

--- a/slides/webid/index.xhtml
+++ b/slides/webid/index.xhtml
@@ -144,7 +144,7 @@ Identity and Discovery is starting to become a big problem for the Web.
 
   <ul>
 
-    <li>Requires strange XRD format, modification to DNS entries.</li>
+    <li>Requires strange <a href="http://en.wikipedia.org/wiki/XRDS">XRD format</a>, modification to DNS entries.</li>
 
     <li>Works with WebID and OpenID.</li>
 
