Updated OpenID Video demo.

--- a/slides/webid/index.xhtml
+++ b/slides/webid/index.xhtml
@@ -87,7 +87,7 @@
   <ul>
     <li>Purpose: Global identity and authentication.</li>
     
-    <li>OpenId Video Demo</li>
+    <li>OPENID VIDEO DEMO</li>
 
     <li>Advantages: one identity across all domains, protected name/value pair attribute transfer, partly distributed/partly RESTful</li>
 
